--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 
      function loadAudio(i) {
       document.getElementById("overlay").innerHTML =
-      '<div class="text-loading">圣诞快乐！</div>';
+      '<div class="text-loading">圣诞快乐！正在加载请稍等......记得把屏幕横过来喔!</div>';
       const files = [
       "https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Simon_Panrucker/Happy_Christmas_You_Guys/Simon_Panrucker_-_01_-_Snowflakes_Falling_Down.mp3",
       "https://files.freemusicarchive.org/storage-freemusicarchive-org/music/no_curator/Dott/This_Christmas/Dott_-_01_-_This_Christmas.mp3",
